--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16.1", features = ["dynamic_linking"] }
+bevy_flycam = "0.16.1"
 bevy_pancam = "0.18.0"
 
 # Enable a small amount of optimization in the dev profile.
