--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,10 @@ edition = "2024"
 
 [dependencies]
 bevy = { version = "0.16.1", features = ["dynamic_linking"] }
+bevy-inspector-egui = "0.32.0"
 bevy_flycam = "0.16.1"
 bevy_pancam = "0.18.0"
+bevy_rapier3d = "0.31.0"
 
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
