--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,6 @@ opt-level = 1
 # Enable a large amount of optimization in the dev profile for dependencies.
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.dev.package.bevy_rapier3d]
+opt-level = 3
