--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher"] }
+bevy = { version = "0.16.1", features = ["dynamic_linking", "file_watcher", "pbr_transmission_textures"] }
 bevy-inspector-egui = "0.32.0"
 bevy_flycam = "0.16.1"
 bevy_pancam = "0.18.0"
